@@ -246,7 +246,7 @@ ABILITY1=HOLY UNHOLY;-4499;4500
 ABILITY2=HOLY !UNHOLY;4501;10000
 ABILITY3=UNHOLY !HOLY;-10000;-4500
 ABILITY4=CHANT;-4499;4500
-ABILITY5=PALADIN_BREAKUP;!-4499;4500
+ABILITY5=PALADIN_BREAKUP;4501;10000
 ABILITY6=PALADIN_COMMANDHORSE;!-4499;4500
 ABILITY7=PALADIN_DEFEND;4501;10000
 ABILITY8=PALADIN_HEALINGHANDS;!-4499;4500
@@ -267,6 +267,7 @@ ABILITY22=PALADIN_UNHOLYSTRIKE;-10000;-4500
 ABILITY23=PALADIN_CHAOSRAGE;-10000;-4500
 ABILITY24=PALADIN_FEAR;-10000;-4500
 ABILITY25=PALADIN_CORRUPTION;-10000;-4500
+ABILITY26=PALADIN_INCITEFIGHT;-10000;-4500
 
 # Affects/Behaviors
 # Adds affects and behaviors to mobs who have this faction (not players).
