@@ -729,7 +729,7 @@ CALLMOUNT=CALL_MOUNT
 CALL_MOUNT=<ABILITY>\
 Usage    : CALLMOUNT\n\r\
 Example  : callmount\n\r\
-Allows the Paladin to call upon a white steed which can bear him from place to place.
+Allows the Paladin to call upon a steed which can bear him from place to place.
 
 FIGHTER_CALLEDSHOT=CALLED_SHOT
 CALLEDSHOT=CALLED_SHOT
@@ -2327,8 +2327,9 @@ HANDS=HEALING_HANDS
 HEALING_HANDS=<ABILITY>\
 Usage    : HANDS [TARGET NAME]\n\r\
 Example  : hands orc\n\r\
-The Paladin becomes a vessel for the healing power of his \
-or her god.
+The Paladin becomes a vessel for the power of his \
+or her god, either healing or harming depending on \
+their heart.
 
 THIEF_HERETICAL_FAITH=THIEF_HERETICALFAITH
 HERETICAL_FAITH=THIEF_HERETICALFAITH
@@ -2587,6 +2588,15 @@ IMPROVEDTHROWING=IMPROVED_THROWING
 IMPROVED_THROWING=<ABILITY>\
 As the fighter gains proficiency in this skill, he or she hits more accurately \
 with thrown weapons, and does up to double damage.
+
+PALADIN_INCITEFIGHT=INCITE_FIGHT
+PALADIN_INCITE_FIGHT=INCITE_FIGHT
+INCITE=INCITE_FIGHT
+INCITE_FIGHT=<ABILITY>\
+Usage    : INCITE [TARGET NAME] \n\r\
+Example  : incite org\n\r\
+The Paladin incites the target to aggression, even against neighbors they would \
+normally ignore.
 
 SKILL_INFORMANT=INFORMANT
 INFORMANT=<ABILITY>\
@@ -3288,9 +3298,9 @@ PALADINS_MOUNT=PALADIN_PALADINS_MOUNT
 PALADIN`S_MOUNT=PALADIN_PALADINS_MOUNT
 PALADIN_PALADINS_MOUNT=<ABILITY>\
 Example  : \n\r\
-The paladin extends his holy protection to his or her mount.  When mounted on a horse or equine, \
+The paladin extends his protection to his or her mount.  When mounted on a horse or equine, \
 the mount has enhanced saving throws, especially against disease and poison, immunity to fear \
-attacks, and protection from evil prayers.
+attacks, and protection from opposed prayers.
 
 PALADIN_PURITY=PALADIN`S_PURITY
 PALADIN\'S_PURITY=PALADIN`S_PURITY
